--- a/src/ProtonDrive.App/ProtonDrive.config.json
+++ b/src/ProtonDrive.App/ProtonDrive.config.json
@@ -63,7 +63,8 @@
     "UpgradePlanFromSidebar": "https://account.proton.me/drive/upgrade?ref=upgrade-drive-windows-app-sidebar",
     "ChangePassword": "https://account.proton.me/drive/account-password",
     "ManageSessions": "https://account.proton.me/drive/security#sessions",
-    "ImportPhotosSupport": "https://proton.me/support/import-files-google-drive",
+    "HowToImportPhotosFromGoogle": "https://proton.me/support/how-to-import-from-google-photos",
+    "HowPhotoImportWorks": "https://proton.me/support/how-photo-import-works",
     "Trash": "https://drive.proton.me/trash",
     "Docs": "https://docs.proton.me"
   },
