--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -30,7 +30,9 @@
     <PackageVersion Include="Microsoft.Windows.CsWin32" Version="0.3.228" />
     <PackageVersion Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageVersion Include="morelinq" Version="4.4.0" />
+    <PackageVersion Include="Polly" Version="8.6.3" />
     <PackageVersion Include="Proton.Cryptography" Version="0.22.0" />
+    <PackageVersion Include="Proton.Drive.Sdk" Version="0.1.0-alpha.3" />
     <PackageVersion Include="ProtonDrive.BlockVerification" Version="1.1.0" />
     <PackageVersion Include="Refit.HttpClientFactory" Version="8.0.0" />
     <PackageVersion Include="Roslynator.Analyzers" Version="4.14.1" />
