--- a/src/ProtonDrive.Shared/ProtonDrive.Shared.csproj
+++ b/src/ProtonDrive.Shared/ProtonDrive.Shared.csproj
@@ -13,21 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-      <_Parameter1>ProtonDrive.App.Tests</_Parameter1>
-    </AssemblyAttribute>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-      <_Parameter1>ProtonDrive.Sync.Adapter.Tests</_Parameter1>
-    </AssemblyAttribute>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-      <_Parameter1>ProtonDrive.App.Windows.Tests</_Parameter1>
-    </AssemblyAttribute>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-      <_Parameter1>$(MSBuildProjectName).Tests</_Parameter1>
-    </AssemblyAttribute>
-    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-      <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
-    </AssemblyAttribute>
+    <InternalsVisibleTo Include="$(MSBuildProjectName).Tests" />
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
+    <InternalsVisibleTo Include="ProtonDrive.App.Tests" />
+    <InternalsVisibleTo Include="ProtonDrive.App.Windows.Tests" />
+    <InternalsVisibleTo Include="ProtonDrive.Client.Tests" />
+    <InternalsVisibleTo Include="ProtonDrive.Sync.Adapter.Tests" />
   </ItemGroup>
 
   <ItemGroup>
