--- a/src/ProtonDrive.App.Windows/ProtonDrive.App.Windows.csproj
+++ b/src/ProtonDrive.App.Windows/ProtonDrive.App.Windows.csproj
@@ -37,6 +37,7 @@
     <FrameworkReference Include="Microsoft.WindowsDesktop.App.WindowsForms" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" />
+    <PackageReference Include="Microsoft.Web.WebView2" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" />
     <PackageReference Include="morelinq" />
     <PackageReference Include="System.Drawing.Common" />
